WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207326
Do not process newly gathered ICE candidates if document is suspended
https://bugs.webkit.org/show_bug.cgi?id=207326
Summary
Do not process newly gathered ICE candidates if document is suspended
youenn fablet
Reported
2020-02-06 04:58:19 PST
Do not process newly gathered ICE candidates if document is suspended
Attachments
Patch
(11.52 KB, patch)
2020-02-06 05:32 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(11.59 KB, patch)
2020-02-06 23:31 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-02-06 04:58:40 PST
<
rdar://problem/57336453
>
youenn fablet
Comment 2
2020-02-06 05:32:27 PST
Created
attachment 389943
[details]
Patch
Eric Carlson
Comment 3
2020-02-06 05:48:11 PST
Comment on
attachment 389943
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=389943&action=review
> Source/WebCore/Modules/mediastream/PeerConnectionBackend.cpp:441 > + ALWAYS_LOG(LOGIDENTIFIER, "Gathered ice candidate:", sdp);
"LOGIDENTIFIER" produces an unexpected method name when executed inside of a lambda, so you might want to pass the value as a parameter.
youenn fablet
Comment 4
2020-02-06 07:46:31 PST
(In reply to Eric Carlson from
comment #3
)
> Comment on
attachment 389943
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=389943&action=review
> > > Source/WebCore/Modules/mediastream/PeerConnectionBackend.cpp:441 > > + ALWAYS_LOG(LOGIDENTIFIER, "Gathered ice candidate:", sdp); > > "LOGIDENTIFIER" produces an unexpected method name when executed inside of a > lambda, so you might want to pass the value as a parameter.
Makes sense will fix it.
Alex Christensen
Comment 5
2020-02-06 08:09:38 PST
Comment on
attachment 389943
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=389943&action=review
> Source/WebCore/testing/MockLibWebRTCPeerConnection.cpp:95 > + int m_delay { 0 };
unsigned. Also, delay makes me think "Seconds" but this is run loop iterations.
youenn fablet
Comment 6
2020-02-06 23:31:01 PST
Created
attachment 390058
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2020-02-07 00:46:37 PST
Comment on
attachment 390058
[details]
Patch for landing Clearing flags on attachment: 390058 Committed
r256009
: <
https://trac.webkit.org/changeset/256009
>
WebKit Commit Bot
Comment 8
2020-02-07 00:46:38 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug